--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.85.5",
     "expo": "~53.0.22",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
@@ -25,8 +26,11 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.7.2",
     "react-native": "0.79.6",
     "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.4",
