--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.85.5",
     "eas-cli": "^16.18.0",
+    "@tanstack/react-query": "^5.85.5",
     "expo": "~53.0.22",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
