--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -8,7 +8,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "eslint . --ext .js,.jsx,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.tsx",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ui": "jest --coverage --collectCoverageFrom='src/components/**/*.{ts,tsx}'"
   },
   "jest": {
     "preset": "jest-expo"
@@ -42,6 +45,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/js": "^9.34.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.34.0",
@@ -50,7 +56,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
     "globals": "^16.3.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~53.0.10",
     "jiti": "^2.5.1",
     "prettier": "3.6.2",
