--- a/CookBook/app.json
+++ b/CookBook/app.json
@@ -29,7 +29,15 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "react-native",
+          "organization": "hannaarkh"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
