--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -33,13 +33,14 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.2",
     "react-native": "0.79.6",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "zustand": "^5.0.8",
-    "react-native-gesture-handler": "~2.24.0"
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
