--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
+    "eas-cli": "^16.18.0",
     "@tanstack/react-query": "^5.85.5",
     "expo": "~53.0.22",
     "expo-font": "~13.3.2",
@@ -32,12 +33,13 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.2",
     "react-native": "0.79.6",
-    "react-native-mmkv": "^3.3.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
