--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -40,6 +40,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
+    "sentry-expo": "^7.2.0",
+    "tslib": "^2.8.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
