--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -18,13 +18,13 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.85.5",
-    "eas-cli": "^16.18.0",
     "expo": "~53.0.22",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "^16.0.6",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
@@ -34,7 +34,7 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.2",
     "react-native": "0.79.6",
-    "react-native-mmkv": "^2.12.2",
+    "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -46,6 +46,7 @@
     "@eslint/js": "^9.34.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "eas-cli": "^16.18.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
