change sqlite and add switch auth button component

--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -18,6 +18,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.85.5",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "^19.1.9",
     "eas-cli": "^16.18.0",
     "expo": "~53.0.22",
     "expo-dev-client": "~5.2.4",
@@ -25,6 +27,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
@@ -44,7 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/js": "^9.34.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.12",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
