--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -47,6 +47,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/js": "^9.34.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.12",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.34.0",
