--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-test-renderer": "^19.1.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
