--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.3",
     "react-native": "0.79.6",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
