--- a/CookBook/app.json
+++ b/CookBook/app.json
@@ -35,7 +35,15 @@
     },
     "plugins": [
       "expo-router",
-      "expo-sqlite"
+      "expo-sqlite",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "react-native",
+          "organization": "hannaarkh"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
