--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
+    "tinycolor2": "^1.6.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/react": "^19.1.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/tinycolor2": "^1.4.6",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
