--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/analytics": "^23.3.0",
+    "@react-native-firebase/app": "^23.3.0",
+    "@react-native-firebase/auth": "^23.3.0",
+    "@react-native-firebase/crashlytics": "^23.3.0",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.85.5",
     "@types/react": "~19.0.10",
@@ -38,8 +42,8 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.3",
     "react-native": "0.79.6",
-    "react-native-gesture-handler": "^2.28.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
