--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -44,7 +44,10 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4",
+    "expo-constants": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
