--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -19,11 +19,11 @@
     "@react-navigation/native": "^7.1.6",
     "@sentry/react-native": "^7.0.1",
     "@tanstack/react-query": "^5.85.9",
-    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.9",
     "crypto-js": "^4.2.0",
     "eas-cli": "^16.18.0",
     "expo": "~53.0.22",
+    "expo-constants": "^17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
@@ -39,7 +39,6 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.3",
     "react-native": "0.79.6",
-    "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
