--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/analytics": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
+    "@react-native-firebase/crashlytics": "^23.3.1",
     "@react-navigation/native": "^7.1.6",
     "@sentry/react-native": "^7.0.1",
     "@tanstack/react-query": "^5.85.9",
@@ -25,6 +28,8 @@
     "expo": "~53.0.22",
     "expo-constants": "^17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-firebase-analytics": "^8.0.0",
+    "expo-firebase-core": "^6.0.0",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
