--- a/CookBook/app.json
+++ b/CookBook/app.json
@@ -26,7 +26,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.hanna.arkh.CookBook"
+      "package": "com.hanna.arkh.CookBook",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,7 @@
     "plugins": [
       "expo-router",
       "expo-sqlite",
+      "expo-notifications",
       [
         "@sentry/react-native/expo",
         {
