--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -23,7 +23,7 @@
     "crypto-js": "^4.2.0",
     "eas-cli": "^16.18.0",
     "expo": "~53.0.22",
-    "expo-constants": "^17.1.7",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
@@ -44,7 +44,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
