--- a/CookBook/package.json
+++ b/CookBook/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "eslint . --ext .js,.jsx,.tsx"
@@ -16,6 +16,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/analytics": "^23.3.1",
+    "@react-native-firebase/app": "^23.3.1",
     "@react-navigation/native": "^7.1.6",
     "@sentry/react-native": "^7.0.1",
     "@tanstack/react-query": "^5.85.9",
@@ -25,8 +27,10 @@
     "expo": "~53.0.22",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-sqlite": "~15.2.14",
@@ -44,9 +48,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "zustand": "^5.0.8",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
